Fixed Issue of displaying the website on mobile device with using a meta tag.

--- a/css/styles.css
+++ b/css/styles.css
@@ -501,7 +501,7 @@ input[type="submit"]{
   }
 
   .skill img{
-    width: 3.5rem;
+    width: 4rem;
     margin-right: 2.5rem;
   }
 
